[package]
name = "cmd_arg"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["The Infinity's"]
repository = "https://github.com/The-Infinitys/rust.cmd-args"
description = "A Simple tool for read command options and arguments."
readme = "README.md"


[dependencies]
colored = "3.0.0"

